feat: update StatisticsController and StatisticsService to return null for missing quiz attempts; enhance API responses with appropriate status codes